<resources>
    <string name="app_name">Open Note Scanner</string>
    <string name="title_activity_open_note_scanner" translatable="false">Open Note Scanner</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_full_image">Scanned Image Viewer</string>
    <string name="images_scanned">Images Scanned</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_title">Confirm</string>
    <string name="confirm_delete_text">Do you want to delete this image?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="confirm_delete_multiple_text">Do you want to delete the selected images?</string>
    <string name="share_snackbar">Share images through</string>
    <string name="action_about">About</string>
    <string name="about_filename">about.md</string>
    <string name="install_opencv">Install OpenCV Manager</string>
    <string name="confirm_install_opencv">Do you want to download OpenCV Manager from GitHub?</string>
    <string name="answer_cancel">Cancel</string>
    <string name="downloading">Downloading</string>
    <string name="downloading_opencv">Downloading OpenCV Manager</string>
    <string name="scanningToast">Searching for document\nTap again to scan whole image</string>
    <string name="colorMode">Color Mode</string>
    <string name="bwMode"><![CDATA[B&W mode]]></string>
    <string name="autoMode">Automatic Mode</string>
    <string name="manualMode">Manual Mode</string>
    <string name="share_app">Share this App</string>
    <string name="share_app_using">Share link through</string>
    <string name="share_app_body">"Take a look at this great app that scans notes, drawings and documents through your camera: "</string>
    <string name="share_app_subject">Great app to scan notes and documents</string>
    <string name="settings">Settings</string>
    <string name="basic_settings">Basic Settings</string>
    <string name="automatic_tagging">Automatic Tagging</string>
    <string name="automatic_tagging_summary">Define automatic tags to be applied on marked scans using the special page template</string>
    <string name="match_aspect">Match preview aspect ratio</string>
    <string name="match_aspect_summary">On several devices the aspect ratio of the preview image does not match the one of the final picture. When turned on, this option will select the highest resolution for the final picture that matches the aspect ratio of the preview image.</string>
    <string name="bug_rotate">Rotate Image 180º</string>
    <string name="bug_rotate_summary">Some devices have the camera upside down, this setting adjusts everything to make sense</string>
    <string name="usage_stats">Usage Statistics</string>
    <string name="usage_stats_summary">Send various usage statistics to developer. No content data will be sent</string>
    <string name="send_message">Send Message</string>
    <string name="send_message_summary">Send message to developer</string>
    <string name="stats_optin_title">Usage Stats</string>
    <string name="stats_optin_text">Do you want to enable Open Note Scanner to send anonymous usage statistics to the developer?\n\nYou can change this anytime on the settings screen.</string>
    <string name="answer_later">Later</string>
    <string name="ask_install_opencv">In order to work, Open Note Scanner needs the services of OpenCV Manager, which is not installed yet.</string>
    <string name="googleplay">Google Play</string>
    <string name="githubdownload">Direct Download</string>
    <string name="activateunknown">Go to Settings</string>
    <string name="messageactivateunknown">Google Play isn\'t available and Install from Unknown Sources is disabled, please go to Settings and activate it.</string>
    <string name="donate">Buy me a coffee</string>
    <string name="donate_summary">If you like this application and think it is useful, you may consider making a donation</string>
    <string name="telegram">Telegram Group</string>
    <string name="telegram_summary">Chat about the project on Telegram</string>
    <string name="feedback_and_contributions">Feedback and contributions</string>
    <string name="bitcoin_summary">Donate using Bitcoin cryptocurrency</string>
    <string name="dogecoin_summary" translatable="false">Wow, such app, many useful</string>
    <string name="paypal_summary">Many credit cards accepted</string>
    <string name="filterModeOn">Image Processor On</string>
    <string name="filterModeOff">Image Processor Off</string>
    <string name="action_tag">Tag</string>
    <string name="storage_folder">Storage Folder</string>
    <string name="storage_folder_summary">Sets where the scanned files should be stored</string>
    <string name="save_png">Save to PNG Format</string>
    <string name="save_png_summary">Save final images to PNG format. Notice that metadata isn\'t supported yet on PNG, so some features will not be available.</string>
    <string name="format_not_supported">Format not supported</string>
    <string name="format_not_supported_message">Image format doesn\'t support tagging</string>
    <string name="standard_tags">Standard Tags:</string>
    <string name="done">Done</string>

    <string name="save_fail_message">Saving file failed</string>
    <string name="save_success_message">File saved</string>


    <!-- preferences -->
    <string name="save_page_size_summary">Save scans to selected format.</string>
    <string name="save_format">Select file format</string>

    <string name="github_project">Project on GitHub</string>
    <string name="github_project_summary">This application is open source, you can help to improve it with feedback, issue reports, code and translations through the GitHub project\'s page</string>
    <string name="github_link" translatable="false">https://github.com/stefan-te/OpenNoteScanner</string>
    <string name="about_category">About OpenNoteScanner</string>
    <string name="about_summary">More information about OpenNoteScanner</string>

    <!-- save settings -->
    <string name="title_activity_settings_new">Settings</string>
    <string name="save_settings_title">Save settings</string>
    <string name="save_settings_summary">Set your save location</string>
    <string name="save_option_title">Save location</string>
    <string name="dracoon_title">DRACOON-link</string>
    <string name="nextcloud_title">Nextcloud-link</string>
    <string name="email_title">E-Mail address</string>
    <string name="ftp_title">FTP-Server address</string>
    <string name="local_title">Local folder</string>
    <string name="address_warn_dialog_title">Warning</string>

    <!-- preview activity-->
    <string name="preview_page_number">Page %d</string>
    <string name="ibt_preview_save_description">@string/save_dialog_positive</string>
    <string name="ibt_preview_scan_description">Scan result</string>
    <string name="ibt_preview_retake_description">Retake scan</string>
    <string name="ibt_preview_add_description">Add another page</string>

    <!-- save dialog-->
    <string name="address_warn_dialog_message">You must set a address for your saveFile</string>
    <string name="page_size">Page size</string>
    <string name="save_dialog_message">Set your filename</string>
    <string name="save_dialog_positive">Save</string>
    <string name="file_name_default" translatable="false">DOC_%s</string>
    <string name="tv_dialog_filename_title">Set filename</string>
    <string name="tv_dialog_page_size_title">Set page size</string>
    <string name="toast_confirm_back_action">If you want to leave the app, press the back button again</string>

    <!-- preference keys-->
    <string name="pref_key_about" translatable="false">about_app</string>
    <string name="pref_key_file_format" translatable="false">file_format</string>
    <string name="pref_key_page_size" translatable="false">page_size</string>
    <string name="pref_key_bug_rotate" translatable="false">bug_rotate</string>
    <string name="pref_key_save_option" translatable="false">save_option</string>
    <string name="pref_key_save_address" translatable="false">save_address</string>
    <string name="pref_key_licenses" translatable="false">licences</string>
    <string name="pref_licenses_summary">@string/preferences_license_summary</string>
    <string name="pref_licenses_title">@string/oss_license_title</string>
</resources>
