<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:persistent="false"
        android:title="@string/basic_settings">
        <PreferenceScreen
            android:summary="@string/automatic_tagging_summary"
            android:title="@string/automatic_tagging">
            <EditTextPreference
                android:name="tag_rocket"
                android:defaultValue="rocket"
                android:key="tag_rocket"
                android:title="Rocket" />
            <EditTextPreference
                android:name="tag_gift"
                android:defaultValue="gift"
                android:key="tag_gift"
                android:title="Gift" />
            <EditTextPreference
                android:name="tag_tv"
                android:defaultValue="tv"
                android:key="tag_tv"
                android:title="TV" />
            <EditTextPreference
                android:name="tag_bell"
                android:defaultValue="bell"
                android:key="tag_bell"
                android:title="Bell" />
            <EditTextPreference
                android:name="tag_game"
                android:defaultValue="game"
                android:key="tag_game"
                android:title="Game" />
            <EditTextPreference
                android:name="tag_star"
                android:defaultValue="star"
                android:key="tag_star"
                android:title="Star" />
            <EditTextPreference
                android:name="tag_magnet"
                android:defaultValue="magnet"
                android:key="tag_magnet"
                android:title="Magnet" />
        </PreferenceScreen>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="match_aspect"
            android:summary="@string/match_aspect_summary"
            android:title="@string/match_aspect" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="save_png"
            android:summary="@string/save_png_summary"
            android:title="@string/save_png" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="bug_rotate"
            android:summary="@string/bug_rotate_summary"
            android:title="@string/bug_rotate" />
        <EditTextPreference
            android:name="storage_folder"
            android:defaultValue="OpenNoteScanner"
            android:key="storage_folder"
            android:summary="@string/storage_folder_summary"
            android:title="@string/storage_folder" />
    </PreferenceCategory>
    <PreferenceCategory
        android:persistent="false"
        android:title="@string/feedback_and_contributions">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="usage_stats"
            android:summary="@string/usage_stats_summary"
            android:title="@string/usage_stats" />
        <Preference
            android:persistent="false"
            android:summary="@string/github_project_summary"
            android:title="@string/github_project">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/ctodobom/OpenNoteScanner" />
        </Preference>
        <Preference
            android:persistent="false"
            android:summary="@string/telegram_summary"
            android:title="@string/telegram">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://telegram.me/OpenNoteScanner" />
        </Preference>
        <Preference
            android:persistent="false"
            android:summary="@string/send_message_summary"
            android:title="@string/send_message">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:claudemir@todobom.com" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="donate_pref_category"
        android:persistent="false"
        android:title="@string/donate">

        <Preference
            android:persistent="false"
            android:summary="@string/donate_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=X6XHVCPMRQEL4" />
        </Preference>

        <Preference
            android:persistent="false"
            android:summary="@string/paypal_summary"
            android:title="Paypal">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=X6XHVCPMRQEL4" />
        </Preference>

        <Preference
            android:key="donate_bitcoin"
            android:persistent="false"
            android:summary="@string/bitcoin_summary"
            android:title="Bitcoin">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="bitcoin:1H5tqKZoWdqkR54PGe9w67EzBnLXHBFmt9" />
        </Preference>

        <Preference
            android:key="donate_dogecoin"
            android:persistent="false"
            android:summary="@string/dogecoin_summary"
            android:title="Dogecoin">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="bitcoin:1H5tqKZoWdqkR54PGe9w67EzBnLXHBFmt9" />
        </Preference>

    </PreferenceCategory>


</PreferenceScreen>